--- a/_posts/2015-04-13-eye.markdown
+++ b/_posts/2015-04-13-eye.markdown
@@ -51,10 +51,16 @@ In the future, we'd like to improve the near-sighted's browsing experience, even
 <a target="_blank" href="https://chrome.google.com/webstore/detail/eye/epoebkjflhhidcopbenmmilgopgppcfg?hl=en-US">
     <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+        <i class="fa fa-chrome fa-stack-1x fa-inverse"></i>
     </span>
 </a>[chrome web store](https://chrome.google.com/webstore/detail/eye/epoebkjflhhidcopbenmmilgopgppcfg?hl=en-US)
-[source code](https://github.com/idf/eye)
+
+<a target="_blank" href="https://github.com/idf/eye">
+    <span class="fa-stack fa-lg">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+    </span>
+</a>[source code](https://github.com/idf/eye)
 
 ## collaborator
 Danyang Zhang, Qian Wang, Zhenchao Gan
