--- a/_posts/2015-04-13-eye.markdown
+++ b/_posts/2015-04-13-eye.markdown
@@ -43,6 +43,7 @@ In the future, we'd like to improve the near-sighted's browsing experience, even
 
 
 ## Built With
+<div class="tags">
 <a class="tag" href="" title="HTML5">HTML5</a>
 <a class="tag">HTML5</a>
 <span class="tag">HTML5</span>
@@ -50,6 +51,7 @@ In the future, we'd like to improve the near-sighted's browsing experience, even
 <span class="badge">CSS3</span>
 <span class="badge">JavaScript</span>
 <span class="badge">Matlab</span>
+</div>
 
 ## Try it out
 <a target="_blank" href="https://chrome.google.com/webstore/detail/eye/epoebkjflhhidcopbenmmilgopgppcfg?hl=en-US">
