--- a/_posts/2015-04-13-eye.markdown
+++ b/_posts/2015-04-13-eye.markdown
@@ -45,10 +45,9 @@ In the future, we'd like to improve the near-sighted's browsing experience, even
 ## Built With
 <div class="tags">
 <a class="tag" style="border-color: black; color: black;">HTML5</a>
-<span class="badge">HTML5</span>
-<span class="badge">CSS3</span>
-<span class="badge">JavaScript</span>
-<span class="badge">Matlab</span>
+<a class="tag" style="border-color: black; color: black;">CSS3</a>
+<a class="tag" style="border-color: black; color: black;">JavaScript</a>
+<a class="tag" style="border-color: black; color: black;">Matlab</a>
 </div>
 
 ## Try it out
@@ -67,4 +66,8 @@ In the future, we'd like to improve the near-sighted's browsing experience, even
 </a>[source code](https://github.com/idf/eye)
 
 ## collaborator
-Danyang Zhang, Qian Wang, Zhenchao Gan
+<div class="tags">
+<a class="tag" href="https://github.com/idf" style="border-color: black; color: black;">Danyang Zhang</a>
+<a class="tag" href="https://github.com/wangqian1992511" style="border-color: black; color: black;">Qian Wang</a>
+<a class="tag" href="https://github.com/gzc" style="border-color: black; color: black;">Zhenchao Gan</a>
+</div>
