--- a/_posts/2015-04-13-eye.markdown
+++ b/_posts/2015-04-13-eye.markdown
@@ -17,9 +17,10 @@ According to the references, there are nearly 6% people suffering from color-bli
 ## What it does
 
 Our project has the following functions:
-- Provide four types of color-blind experiences
-- Supply near-sight experiences with diopters ranging from 0 to 10 
-- Adjust the color of the web sites for the color-blind to distinguish the elements
+
+* Provide four types of color-blind experiences
+* Supply near-sight experiences with diopters ranging from 0 to 10 
+* Adjust the color of the web sites for the color-blind to distinguish the elements
 
 ## How I built it
 
