--- a/_posts/2016-04-07-test-math.markdown
+++ b/_posts/2016-04-07-test-math.markdown
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "Test Latex"
+title:      "Latex Test"
 date:       2016-04-07 12:00:00
 author:     "jxzhuge12"
 catalog:    false
